[project]
name = "doc2poma"
dynamic = ["version"]
description = "Convert PDFs, HTML, and images into structured .poma format"
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
authors = [{ name = "TIGON S.L.U.", email = "info@poma.science" }]
dependencies = ["poma-senter", "litellm", "tiktoken", "pandas", "Pillow", "pillow-heif", "html2text", "beautifulsoup4", "pymupdf", "pytest", "cairosvg", "pycairo", "rlPyCairo", "svglib", "reportlab", "wand"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "doc2poma.version.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
